tests/fixtures/invalid/pow_list_str_float.py
# Cannot call pow() with List[int], Str, Float
x = pow([1, 2, 3], "hello", 1.0)
